fix: remove overflow visibile in Windows

--- a/src/scss/06-components/_article-section.scss
+++ b/src/scss/06-components/_article-section.scss
@@ -111,7 +111,7 @@
   @include list-reset;
 
   display: flex;
-  overflow: scroll;
+  overflow-x: auto;
   white-space: nowrap;
 }
 
